// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RTLPanel with direction set while panel closed renders 1`] = `
<div
  class="sc-jTrPJq fVThFB"
>
  <span
    class="sc-beqWaB JxkRB"
  >
    <label
      class="sc-gueYoa MnWhy"
    >
      <input
        aria-controls="rtl-status"
        checked=""
        class="sc-dmqHEX cKQmMr"
        data-testid="rtl-toggle-input"
        type="checkbox"
      />
      <a
        class="sc-hLseeU cgSywu"
      >
        Enable right-to-left
      </a>
    </label>
    <span
      aria-live="polite"
      class="sc-eDDNvR fnwEbN"
      id="rtl-status"
      role="region"
    >
      Right-to-left
    </span>
  </span>
</div>
`;

exports[`RTLPanel with query parameter renders 1`] = `
<div
  class="sc-jTrPJq fVThFB"
>
  <span
    class="sc-beqWaB JxkRB"
  >
    <label
      class="sc-gueYoa MnWhy"
    >
      <input
        aria-controls="rtl-status"
        checked=""
        class="sc-dmqHEX cKQmMr"
        data-testid="rtl-toggle-input"
        type="checkbox"
      />
      <a
        class="sc-hLseeU cgSywu"
      >
        Enable right-to-left
      </a>
    </label>
    <span
      aria-live="polite"
      class="sc-eDDNvR fnwEbN"
      id="rtl-status"
      role="region"
    >
      Right-to-left
    </span>
  </span>
</div>
`;

exports[`RTLPanel with story param renders 1`] = `
<div
  class="sc-jTrPJq fVThFB"
>
  <span
    class="sc-beqWaB JxkRB"
  >
    <label
      class="sc-gueYoa MnWhy"
    >
      <input
        aria-controls="rtl-status"
        checked=""
        class="sc-dmqHEX cKQmMr"
        data-testid="rtl-toggle-input"
        type="checkbox"
      />
      <a
        class="sc-hLseeU cgSywu"
      >
        Enable right-to-left
      </a>
    </label>
    <span
      aria-live="polite"
      class="sc-eDDNvR fnwEbN"
      id="rtl-status"
      role="region"
    >
      Right-to-left
    </span>
  </span>
</div>
`;

exports[`RTLPanel with story param responds to changes 1`] = `
<div
  class="sc-jTrPJq fVThFB"
>
  <span
    class="sc-beqWaB JxkRB"
  >
    <label
      class="sc-gueYoa MnWhy"
    >
      <input
        aria-controls="rtl-status"
        checked=""
        class="sc-dmqHEX cKQmMr"
        data-testid="rtl-toggle-input"
        type="checkbox"
      />
      <a
        class="sc-hLseeU cgSywu"
      >
        Enable right-to-left
      </a>
    </label>
    <span
      aria-live="polite"
      class="sc-eDDNvR fnwEbN"
      id="rtl-status"
      role="region"
    >
      Right-to-left
    </span>
  </span>
</div>
`;

exports[`RTLPanel with story param responds to changes 2`] = `
<div
  class="sc-jTrPJq fVThFB"
>
  <span
    class="sc-beqWaB JxkRB"
  >
    <label
      class="sc-gueYoa NAoBb"
    >
      <input
        aria-controls="rtl-status"
        checked=""
        class="sc-dmqHEX cKQmMr"
        data-testid="rtl-toggle-input"
        type="checkbox"
      />
      <a
        class="sc-hLseeU bkAwTu"
      >
        Enable right-to-left
      </a>
    </label>
    <span
      aria-live="polite"
      class="sc-eDDNvR fnwEbN"
      id="rtl-status"
      role="region"
    >
      Left-to-right
    </span>
  </span>
</div>
`;

exports[`RTLPanel without query parameter renders 1`] = `
<div
  class="sc-jTrPJq fVThFB"
>
  <span
    class="sc-beqWaB JxkRB"
  >
    <label
      class="sc-gueYoa NAoBb"
    >
      <input
        aria-controls="rtl-status"
        class="sc-dmqHEX cKQmMr"
        data-testid="rtl-toggle-input"
        type="checkbox"
      />
      <a
        class="sc-hLseeU bkAwTu"
      >
        Enable right-to-left
      </a>
    </label>
    <span
      aria-live="polite"
      class="sc-eDDNvR fnwEbN"
      id="rtl-status"
      role="region"
    >
      Left-to-right
    </span>
  </span>
</div>
`;
